Fixed aligned of contact page form

--- a/styles/sass/_contact-page.scss
+++ b/styles/sass/_contact-page.scss
@@ -65,7 +65,7 @@ form.contact-page-form {
   justify-content: center;
   margin: 0 auto;
   box-shadow: 25px 25px 0px -5px $secondary-text-color;
-  // width: 100%;
+  box-sizing: border-box;
 }
 
 .contact-page-form {
@@ -112,6 +112,10 @@ input, textarea {
 input::placeholder, textarea::placeholder {
   color: white;
 }
+div.contact-input:nth-child(2) {
+  margin-left: 30px;
+}
+
 .contact-page-input-form input {
   border-bottom: 1px solid white;
   padding-bottom: 10px;
@@ -138,4 +142,9 @@ input::placeholder, textarea::placeholder {
   font-size: 39px; // convert pixels to rem
   letter-spacing: 1.9px;
   padding: 5px 0px;
+}
+
+
+@media (max-width: 1200px) {
+
 }
