--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1247,6 +1247,8 @@ form.contact-page-form {
   margin: 0 auto;
   -webkit-box-shadow: 25px 25px 0px -5px #ff8327;
           box-shadow: 25px 25px 0px -5px #ff8327;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .contact-page-form {
@@ -1323,6 +1325,10 @@ input::-ms-input-placeholder, textarea::-ms-input-placeholder {
 
 input::placeholder, textarea::placeholder {
   color: white;
+}
+
+div.contact-input:nth-child(2) {
+  margin-left: 30px;
 }
 
 .contact-page-input-form input {
